base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-deployment
  namespace: webapps
  labels:
    app: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - image: alphabraga/thunder-site:0.0.3
        name: site
        ports:
        - containerPort: 80
        imagePullPolicy: Always
