base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  namespace: webapps
spec:
  ingressClassName: nginx
  rules:
  - host: www.thundertech.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site-service
            port:
              number: 80
